--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -53,7 +53,7 @@ jobs:
           rmdir local
           git add .
           git config --global user.name Continuous Integration
-          git config --global user.email ${{ GIT_USER_EMAIL }}
+          git config --global user.email ${{ env.GIT_USER_EMAIL }}
           git commit -m "added autgenerated collection by job ${{ github.job }}#${{ github.run_number }}"
           git push origin ${{ github.ref_name }}
           
