--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -8,20 +8,28 @@
 name: CI
 
 on:  # yamllint disable-line rule:truthy
-
   push:
     branches:
       - '**'
     tags-ignore:
       - '*'
-
   schedule:
     - cron: '59 5 * * 6'
-
   workflow_dispatch:
+    inputs:
+      targeted_branch:
+        type: choice
+        options:
+          - main
+          - dev
 
 jobs:
 
+  PREPARE:
+    uses: mafalb/workflows/.github/workflows/reusable-selectbranch.yml@dev
+    with:
+      targeted_branch: ${{ inputs.targeted_branch }}
+    
   AUTOGENERATE:
     # don't run on pull request from ourselves
     #
@@ -32,6 +40,9 @@ jobs:
       contents: write
     outputs:
       ref: ${{ steps.commit.outputs.ref }}
+    needs: PREPARE
+    env:
+      TARGETED_BRANCH: ${{ needs.PREPARE.outputs.branch }}
 
     steps:
 
@@ -39,10 +50,9 @@ jobs:
         run: |
           test -n "${{ vars.GIT_USER_EMAIL }}"
 
-      - name: Debug
+      - name: Check for remote branch
         run: |
-          pwd
-          tree
+          test -n "$TARGETED_BRANCH"
 
       - name: Checkout the repo
         uses: actions/checkout@v4
@@ -53,7 +63,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           repository: mafalb/ansible_collection_skeleton
-          ref: dev
+          ref: $TARGETED_BRANCH
           path: ansible_collection_skeleton
 
       - name: Debug
@@ -79,7 +89,7 @@ jobs:
           if git status --porcelain|grep ^M ; then
               # some files have changed
               git commit -m "added autgenerated collection by job ${{ github.job }}#${{ github.run_number }}"
-              git push origin ${{ github.ref_name }}
+              git push origin $TARGETED_BRANCH
           fi
           sha=$(git log --no-decorate --pretty=format:%H -n 1)
           echo "ref=$sha" >> $GITHUB_OUTPUT
