fix wrong variable name

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -43,7 +43,7 @@ jobs:
       ref: ${{ steps.commit.outputs.ref }}
     needs: PREPARE
     env:
-      TARGETED_BRANCH: ${{ needs.PREPARE.outputs.branch }}
+      TARGETED_BRANCH: ${{ needs.PREPARE.outputs.ref }}
 
     steps:
 
