--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -44,6 +44,7 @@ jobs:
     needs: PREPARE
     env:
       TARGETED_BRANCH: ${{ needs.PREPARE.outputs.ref }}
+      x: ${{ needs.PREPARE.outputs.x }}
 
     steps:
 
