make syntax happy

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -18,6 +18,7 @@ on:  # yamllint disable-line rule:truthy
   workflow_dispatch:
     inputs:
       targeted_branch:
+        description: The name of the target branch on repositories
         type: choice
         options:
           - dev
@@ -29,7 +30,7 @@ jobs:
     uses: mafalb/workflows/.github/workflows/reusable-selectbranch.yml@dev
     with:
       targeted_branch: ${{ inputs.targeted_branch }}
-    
+
   autogenerate:
     # don't run on pull request from ourselves
     #
